docs: обновление документации

--- a/.env.example
+++ b/.env.example
@@ -26,4 +26,4 @@ PGADMIN_PASSWORD=admin
 
 # Frontend Configuration
 VITE_API_URL=http://localhost:8080/api
-VITE_APP_NAME=JP-RU Dictionary
+VITE_APP_NAME=j~dict!^w^
