--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,7 +142,7 @@ services:
       - "5173:80"
     environment:
       VITE_API_URL: ${VITE_API_URL:-http://localhost:8080/api}
-      VITE_APP_NAME: ${VITE_APP_NAME:-JP-RU Dictionary}
+      VITE_APP_NAME: ${VITE_APP_NAME:-j~dict!^w^}
     volumes:
       - ./frontend:/app
       - /app/node_modules
