--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,10 @@ CORS_ALLOWED_ORIGINS=http://localhost:5173
 PGADMIN_EMAIL=admin@admin.com
 PGADMIN_PASSWORD=admin
 
+# Swagger Configuration
+SWAGGER_URL=http://localhost:8080/swagger/index.html
+SWAGGER_API_URL=http://localhost:8080/api/swagger/index.html
+
 # Frontend Configuration
 VITE_API_URL=http://localhost:8080/api
 VITE_APP_NAME=j~dict!^w^
